--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,7 @@ services:
       DATABASE_URL_PROD: ${DATABASE_URL_PROD}
       DATABASE_URL_DEV: ${DATABASE_URL_DEV}
       # API Keys for runtime
+      GOOGLE_GENERATIVE_AI_API_KEY: ${GOOGLE_GENERATIVE_AI_API_KEY}
       GOOGLE_API_KEY: ${GOOGLE_API_KEY}
       GROQ_API_KEY: ${GROQ_API_KEY}
     depends_on:
