--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ai-sdk/google": "^2.0.11",
     "@ai-sdk/groq": "^1.2.7",
     "@ai-sdk/react": "^2.0.29",
+    "@modelcontextprotocol/sdk": "^1.25.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.4",
@@ -47,6 +48,7 @@
     "drizzle-orm": "^0.41.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
+    "mcp-handler": "^1.0.7",
     "nanoid": "^5.1.5",
     "next": "^15.5.9",
     "next-themes": "^0.4.6",
@@ -61,7 +63,7 @@
     "swr": "^2.3.6",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
-    "zod": "^3.23.8",
+    "zod": "^3.25.76",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
